--- a/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
+++ b/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
@@ -707,6 +707,32 @@
     <Content Include="lib\LinqKit.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\86ac26988c1602f38c73.svg" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\8e0d42742c8cfda5adb0.svg" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\BodyText.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\BreadcrumbList.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\ContentContainer.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\DownloadItem.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\ea2e715bc5e538260b1d.svg" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\ee2f859e53370bb226c8.svg" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\f0b198a835077dc1a2d6.svg" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\fb30d21852685e4f6a40.svg" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\GeonorgeFooter.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\GnInput.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\GnSelect.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\GnTable.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\HeadingText.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\index.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\init.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\MainMenu.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\MainNavigation.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\MainSearchField.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\MapItem.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\NavigationTabContent.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\NavigationTabHeading.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\NavigationTabs.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\SearchTypeSelector.js" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\StandardButton.js" />
     <Content Include="robots.txt" />
     <Content Include="Areas\HelpPage\Views\Help\ResourceModel.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Index.cshtml" />
@@ -929,6 +955,120 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ComplexTypeModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\0a42ae35c39a08f3db47.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\0a69e1398f51230ddf80.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\0b4e714784879c4df426.eot" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\16d7dcebbcc7dee6b7c8.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\18fd02483646c7a5d9c5.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\1be2c8dbe8588729c85c.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\21c028af1b458a12a29e.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\2b468f1384e3c7886b23.eot" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\31b54bb591f13b5af8eb.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\368328471c9cb6626306.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\3d8deabfbb86f3802d73.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\3f95af33a9c51f0b15c8.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\44948da79361d8c1011f.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\4773bb08635e12dc9219.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\4c06a4ee32ce7b3b091d.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\4d6bafd6fb17ead14def.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\570b544b0afb1e88be8b.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\5ef638e15485a61b1601.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\627800d124ceee1f74f4.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\68c0bd48ad5470c34432.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\6aded4d72c6088cfa96b.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\6b4dcc755b6685d1f417.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\6d4ac1d3b0a6e2c3ae5a.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\744e43f35d44a20783d1.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\755ed58ead391f5acefd.ttf" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\7916b2df8f4907823671.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\8516ced2c9ffba4e1487.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\86050dec57a4fdafb363.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\88d296607e0b99399566.ttf" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\8c003e1fa110b9a48eb7.eot" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\8f254453a1fc40c97013.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\9f55a982c90528f32916.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\a06d7fd4fecf6f769b96.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\a4933e7a22e115be5a67.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\a49b04c07bcb81bd813b.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\b0fca85ee49e3971c045.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\b555863d757a83720f7d.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\b5cd4204f7fc864d773e.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\be60cf50e7de109e72e9.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\BodyText.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\BreadcrumbList.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\c0ed32a3ea09e1328768.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\c1d9d698b3aea9612cc9.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\c414c18816dfcf1ae9a2.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\c95847626f3360d879e9.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\cbe40cb16a95c2f3aa9f.ttf" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\ContentContainer.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\d0033942a11996c40380.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\d58b5ba82114cba2ff3b.ttf" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\d65e10db29e93b980bc8.eot" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\da614a72b350f791e1b1.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\dafbfe171d778172c57f.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\df9042c7bd2e79e1f3dc.ttf" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\DownloadItem.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\e430931267180c156abd.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\e48abb4b62120f04dfb5.eot" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\e87d055fb33f4e0b8cb9.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\eaf775c2192c8a32f14b.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\eb7a94a4abbb87742f65.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\ee04d481fc9443398a11.woff2" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\f8d47ad7f580d88f4807.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\f9ed96b19cd4b0a7ee5a.woff" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\faf41a9c09c079830f3e.ttf" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\fd395660b14acae81045.eot" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\GeonorgeFooter.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\GnInput.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\GnSelect.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\GnTable.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\HeadingText.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\index.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\init.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\MainMenu.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\MainNavigation.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\MainSearchField.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\MapItem.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\NavigationTabContent.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\NavigationTabHeading.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\NavigationTabs.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\package.json" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\SearchTypeSelector.js.map" />
+    <Content Include="node_modules\%40kartverket\geonorge-web-components\StandardButton.js.map" />
+    <Content Include="node_modules\.yarn-integrity" />
+  </ItemGroup>
+  <ItemGroup>
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\apiHelpers.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\body-text.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\breadcrumb-list.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\content-container.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\cookieHelpers.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\download-items.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\downloadItemHelpers.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\geonorge-footer.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\gn-input.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\gn-select.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\gn-table.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\guiHelpers.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\heading-text.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\index.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\init.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\main-menu.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\main-navigation.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\main-search-field.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\map-items.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\mapItemHelpers.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\navigation-tab-content.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\navigation-tab-heading.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\navigation-tabs.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\search-type-selector.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\search.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\standard-button.d.ts" />
+    <TypeScriptCompile Include="node_modules\%40kartverket\geonorge-web-components\urlHelpers.d.ts" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
