--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -3,8 +3,8 @@
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
     <section name="basicAuth" type="WebApi.BasicAuth.BasicAuthSection, WebApi.BasicAuth" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <basicAuth configSource="authentication.config" />
   <connectionStrings>
@@ -45,7 +45,7 @@
     <add key="OrderBundleServiceUrl" value="http://testnedlasting2.geonorge.no/fmedatadownload/FilePacker/FilePacker.fmw" />
     <add key="KartkatalogenUrl" value="//kartkatalog.dev.geonorge.no/" />
     <add key="WebmasterEmail" value="post@norgedigitalt.no" />
-	<add key="SupportEmail" value="dev@arkitektum.no" />
+    <add key="SupportEmail" value="dev@arkitektum.no" />
     <add key="SmtpHost" value="smtp.altibox.no" />
     <add key="EnvironmentName" value="dev" />
     <add key="SupportsMultiCulture" value="true" />
@@ -55,6 +55,14 @@
       <servicePointManager expect100Continue="false" />
     </settings>
   </system.net>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <system.web>
     <sessionState cookieSameSite="None" />
     <customErrors mode="Off" defaultRedirect="~/Error/">
@@ -62,7 +70,7 @@
       <error statusCode="401" redirect="~/Error/Unauthorized/" />
     </customErrors>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.7.2">
+    <compilation debug="true" targetFramework="4.8">
       <assemblies>
         <add assembly="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
       </assemblies>
@@ -71,22 +79,22 @@
     <httpModules />
   </system.web>
   <system.webServer>
-	  <staticContent>
-		  <remove fileExtension=".sos" />
-		  <mimeMap fileExtension=".sos" mimeType="text/vnd.sosi" />
-		  <remove fileExtension=".zip" />
-		  <mimeMap fileExtension=".zip" mimeType="application/zip" />
-		  <remove fileExtension=".7z" />
-		  <mimeMap fileExtension=".7z" mimeType="application/x-7z-compressed" />
-		  <remove fileExtension=".tar" />
-		  <mimeMap fileExtension=".tar" mimeType="application/x-tar" />
-		  <remove fileExtension=".gdb" />
-		  <mimeMap fileExtension=".gdb" mimeType="application/octet-stream" />
-		  <remove fileExtension=".gml" />
-		  <mimeMap fileExtension=".gml" mimeType="application/gml+xml" />
-		  <remove fileExtension=".geojson" />
-		  <mimeMap fileExtension=".geojson" mimeType="application/geo+json" />
-	  </staticContent>
+    <staticContent>
+      <remove fileExtension=".sos" />
+      <mimeMap fileExtension=".sos" mimeType="text/vnd.sosi" />
+      <remove fileExtension=".zip" />
+      <mimeMap fileExtension=".zip" mimeType="application/zip" />
+      <remove fileExtension=".7z" />
+      <mimeMap fileExtension=".7z" mimeType="application/x-7z-compressed" />
+      <remove fileExtension=".tar" />
+      <mimeMap fileExtension=".tar" mimeType="application/x-tar" />
+      <remove fileExtension=".gdb" />
+      <mimeMap fileExtension=".gdb" mimeType="application/octet-stream" />
+      <remove fileExtension=".gml" />
+      <mimeMap fileExtension=".gml" mimeType="application/gml+xml" />
+      <remove fileExtension=".geojson" />
+      <mimeMap fileExtension=".geojson" mimeType="application/geo+json" />
+    </staticContent>
     <httpProtocol>
       <customHeaders>
         <clear />
@@ -96,13 +104,13 @@
     </httpProtocol>
     <httpErrors errorMode="DetailedLocalOnly" existingResponse="PassThrough" />
     <validation validateIntegratedModeConfiguration="false" />
-    
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
