--- a/Kartverket.Geonorge.Download/packages.config
+++ b/Kartverket.Geonorge.Download/packages.config
@@ -9,8 +9,8 @@
   <package id="Autofac.Owin" version="4.2.0" targetFramework="net472" />
   <package id="Autofac.WebApi2" version="4.3.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
-  <package id="Geonorge.AuthLib.Common" version="1.0.60" targetFramework="net472" />
-  <package id="Geonorge.AuthLib.NetFull" version="1.0.60" targetFramework="net472" />
+  <package id="Geonorge.AuthLib.Common" version="1.0.62" targetFramework="net48" />
+  <package id="Geonorge.AuthLib.NetFull" version="1.0.62" targetFramework="net48" />
   <package id="GeoNorgeAPI" version="3.5.2" targetFramework="net48" />
   <package id="Kartverket.Geonorge.Utilities" version="1.0.49" targetFramework="net472" />
   <package id="log4net" version="2.0.12" targetFramework="net472" />
@@ -31,6 +31,7 @@
   <package id="Microsoft.AspNet.WebApi.Versioning.ApiExplorer" version="3.1.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration" version="3.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="3.0.0" targetFramework="net472" />
@@ -41,11 +42,12 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="3.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.6.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Logging" version="5.6.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols" version="5.6.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.6.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.6.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="7.3.1" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="7.3.1" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="7.3.1" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocols" version="7.3.1" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="7.3.1" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="7.3.1" targetFramework="net48" />
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net472" />
@@ -59,16 +61,20 @@
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="ScottBrady91.AspNet.Identity.ConfigurablePasswordHasher" version="1.0.0" targetFramework="net452" />
   <package id="Strathweb.CacheOutput.WebApi2" version="0.11.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="4.6.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.6.0" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.6.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="7.3.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="4.6.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="4.6.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="4.6.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="4.7.2" targetFramework="net48" />
+  <package id="System.Text.Json" version="4.7.2" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="WebApi.BasicAuth" version="0.3.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
