Oppretter initiell risiko- og sårbarhetsanalyse (RoS), risc-default.risc.yaml, og krypteringskonfigurasjon, .sops.yaml

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,56 +1,1 @@
-# nonk8s
-apiVersion: "backstage.io/v1alpha1"
-kind: "Component"
-metadata:
-  name: "Geonorge.NedlastingAPI"
-  tags:
-  - "public"
-spec:
-  type: "service"
-  lifecycle: "production"
-  owner: "datadeling_og_distribusjon"
-  system: "geonorge"
-  providesApis:
-  - "Geonorge.NedlastingAPI-api"
----
-apiVersion: "backstage.io/v1alpha1"
-kind: "Group"
-metadata:
-  name: "security_champion_Geonorge.NedlastingAPI"
-  title: "Security Champion Geonorge.NedlastingAPI"
-spec:
-  type: "security_champion"
-  parent: "land_security_champions"
-  members:
-  - "dagolav"
-  children:
-  - "resource:Geonorge.NedlastingAPI"
----
-apiVersion: "backstage.io/v1alpha1"
-kind: "Resource"
-metadata:
-  name: "Geonorge.NedlastingAPI"
-  links:
-  - url: "https://github.com/kartverket/Geonorge.NedlastingAPI"
-    title: "Geonorge.NedlastingAPI på GitHub"
-spec:
-  type: "repo"
-  owner: "security_champion_Geonorge.NedlastingAPI"
-  dependencyOf:
-  - "component:Geonorge.NedlastingAPI"
----
-apiVersion: "backstage.io/v1alpha1"
-kind: "API"
-metadata:
-  name: "Geonorge.NedlastingAPI-api"
-  tags:
-  - "public"
-spec:
-  type: "openapi"
-  lifecycle: "production"
-  owner: "datadeling_og_distribusjon"
-  definition: |
-    openapi: "3.0.0"
-    info:
-        title: Geonorge.NedlastingAPI API
-    paths:
+Audiences in Jwt are not allowed
