--- a/Kartverket.Geonorge.Download/settings.default.config
+++ b/Kartverket.Geonorge.Download/settings.default.config
@@ -19,7 +19,7 @@
   <add key="BasicAuthRoles" value=""/>
   <add key="MatrikkelEiendomEndpoint" value="https://localhost:44350/api/tilgangskontrollmatrikkeleiendomtest"/>
   <add key="MatrikkelEiendomEndpointToken" value=""/>
-  <add key="ClipperFileValidator" value="https://testnedlasting2.geonorge.no/fmedatastreaming/Orders/ClipperFileValidator.fmw"/>
+  <add key="ClipperFileValidator" value="http://testnedlasting.geonorge.no/fmedatastreaming/Orders/ClipperFileValidator.fmw"/>
   <add key="ClipperFileValidatorToken" value=""/>
   <add key="FmeToken" value=""/>
   <add key="FmeAreaCheckerToken" value=""/>
