--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -42,7 +42,7 @@
     <add key="RegistryUrl" value="http://register.dev.geonorge.no/" />
     <add key="FmeAreaChecker" value="http://testnedlasting.geonorge.no/fmedatastreaming/Util/AreaChecker.fmw?" />
     <add key="FmeAreaCheckerEnabled" value="true" />
-    <add key="OrderBundleServiceUrl" value="http://testnedlasting2.geonorge.no/fmedatadownload/FilePacker/FilePacker.fmw" />
+    <add key="OrderBundleServiceUrl" value="http://testnedlasting.geonorge.no/fmedatadownload/FilePacker/FilePacker.fmw" />
     <add key="KartkatalogenUrl" value="//kartkatalog.dev.geonorge.no/" />
     <add key="WebmasterEmail" value="post@norgedigitalt.no" />
     <add key="SupportEmail" value="dev@arkitektum.no" />
