Use other token for nedlasting2.geonorge.no

--- a/Kartverket.Geonorge.Download/settings.default.config
+++ b/Kartverket.Geonorge.Download/settings.default.config
@@ -22,6 +22,7 @@
   <add key="ClipperFileValidator" value="http://testnedlasting.geonorge.no/fmedatastreaming/Orders/ClipperFileValidator.fmw"/>
   <add key="ClipperFileValidatorToken" value=""/>
   <add key="FmeToken" value=""/>
+  <add key="FmeToken2" value=""/>
   <add key="FmeAreaCheckerToken" value=""/>
   <add key="OrderBundleServiceUrlToken" value=""/>
   <add key="FmeCheckPackageSizeUrl" value=""/>
