Changed to PG instead of MSSQL + working docker setup

--- a/Geonorge.Download/Properties/launchSettings.json
+++ b/Geonorge.Download/Properties/launchSettings.json
@@ -29,16 +29,17 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Container (Dockerfile)": {
+    "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORTS": "8081",
+        "ASPNETCORE_HTTPS_PORTS": "",
         "ASPNETCORE_HTTP_PORTS": "8080"
       },
+      "httpPort": 8080,
       "publishAllPorts": true,
-      "useSSL": true
+      "useSSL": false
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
