--- a/Geonorge.Download/Dockerfile
+++ b/Geonorge.Download/Dockerfile
@@ -1,17 +1,26 @@
 # See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
-
+#EXPOSE 8081
+ENV ASPNETCORE_HTTP_PORTS=8080
+ENV ASPNETCORE_HTTPS_PORTS=
 
 # This stage is used to build the service project
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
+
+RUN dotnet nuget add source \
+         "http://host.docker.internal:5640/v3/index.json" \
+         --name testFeed \
+         --username token \
+         --password "MyAwesome1337Key" \
+         --store-password-in-clear-text
+
 COPY ["Geonorge.Download/Geonorge.Download.csproj", "Geonorge.Download/"]
 RUN dotnet restore "./Geonorge.Download/Geonorge.Download.csproj"
 COPY . .
