added redis for dataprotection key (for SKIP)

--- a/Geonorge.Download/Properties/launchSettings.json
+++ b/Geonorge.Download/Properties/launchSettings.json
@@ -29,7 +29,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Docker": {
+    "Docker container": {
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
