--- a/Geonorge.Download/appsettings.json
+++ b/Geonorge.Download/appsettings.json
@@ -24,8 +24,11 @@
   "SupportsMultiCulture": true,
 
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "",
+    "RedisConnection": "redis:6379"
   },
+
+
 
   "GeoNetworkUrl": "",
   "GeoNetworkUsername": "",
