--- a/Geonorge.Download/Dockerfile
+++ b/Geonorge.Download/Dockerfile
@@ -2,7 +2,8 @@
 
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine AS base
-USER $APP_UID
+# USER $APP_UID
+USER 150
 WORKDIR /app
 EXPOSE 8080
 #EXPOSE 8081
