--- a/Geonorge.Download/Dockerfile
+++ b/Geonorge.Download/Dockerfile
@@ -3,7 +3,8 @@
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine AS base
 # USER $APP_UID
-COPY ./Geonorge.Download/Certs/_dev.geonorge.no.pem /etc/ssl/certs/
+COPY ./Geonorge.Download/Certs/_dev.geonorge.no.pem /usr/local/share/ca-certificates/
+RUN apk add --no-cache ca-certificates && update-ca-certificates
 USER 150
 WORKDIR /app
 EXPOSE 8080
