--- a/Geonorge.Download/appsettings.json
+++ b/Geonorge.Download/appsettings.json
@@ -15,7 +15,7 @@
   "BuildVersionNumber": "3.1",
   "GeonorgeUrl": "//www.test.geonorge.no/",
   "DownloadUrl": "https://localhost:44350/",
-  "RegistryUrl": "http://register.dev.geonorge.no/",
+  "RegistryUrl": "https://register.dev.geonorge.no/",
   "KartkatalogenUrl": "//kartkatalog.dev.geonorge.no/",
   "WebmasterEmail": "post@norgedigitalt.no",
   "SupportEmail": "dev@arkitektum.no",
