--- a/Geonorge.Download/Dockerfile
+++ b/Geonorge.Download/Dockerfile
@@ -3,8 +3,10 @@
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine AS base
 # USER $APP_UID
-COPY ./Geonorge.Download/Certs/_dev.geonorge.no.pem /usr/local/share/ca-certificates/
-RUN apk add --no-cache ca-certificates && update-ca-certificates
+USER root
+COPY ./Geonorge.Download/Certs/devcert.crt /usr/local/share/ca-certificates/devgeonorgeregister.crt
+RUN apk --no-cache add ca-certificates openssl && update-ca-certificates
+
 USER 150
 WORKDIR /app
 EXPOSE 8080
