file paths + publish include rules + remove cert from image

--- a/Geonorge.Download/Geonorge.Download.csproj
+++ b/Geonorge.Download/Geonorge.Download.csproj
@@ -45,7 +45,8 @@
   </ItemGroup>
 	
   <ItemGroup>
-	<None Include="wwwroot\**" CopyToPublishDirectory="Always" />
+	<Content Remove="wwwroot\clipperfiles\**" CopyToPublishDirectory="Never" Condition="'$(Configuration)' == 'Release'" />
+	<Content Remove="wwwroot\geonorge\**" CopyToPublishDirectory="Never" Condition="'$(Configuration)' == 'Release'" />
 	<None Include="node_modules\**" />
-  </ItemGroup>
+	</ItemGroup>
 </Project>
