workflow test jq

--- a/.github/workflows/build.nedlastingapi.yml
+++ b/.github/workflows/build.nedlastingapi.yml
@@ -39,11 +39,10 @@ jobs:
       - name: Get commit message
         id: get_commit_message
         run: |
-          {
-            echo 'nedlasting_commit_message<<EOF'
-            git log -1 --pretty=%B
-            echo 'EOF'
-          } >> "$GITHUB_OUTPUT"
+          RAW_MSG="$(git log -1 --pretty=%B)"
+          CLEANED_MSG=$(jq -Rs . <<<"$RAW_MSG")
+          CLEANED_MSG="${CLEANED_MSG:1:-1}"
+          echo "nedlasting_commit_message=$CLEANED_MSG" >> $GITHUB_OUTPUT
 
       - name: Extract Docker metadata
         id: meta
@@ -85,7 +84,7 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.INTERNAL_PAT }}" \
           https://api.github.com/repos/kartverket/datadeling-apps/actions/workflows/update-dev-image.yml/dispatches \
-          -d '{"ref":"main","inputs":{ "application":"geonorge-nedlasting-api","namespace":"datadeling-geonorge","tag":"${{ needs.build_nedlastingapi.outputs.tags }}","commit_message":"${{ needs.build_nedlastingapi.outputs.commit_message }}"}}'
+          -d '{"ref":"main","inputs":{"application":"geonorge-nedlasting-api","namespace":"datadeling-geonorge","tag":"${{needs.build_nedlastingapi.outputs.tags}}","commit_message":"${{needs.build_nedlastingapi.outputs.commit_message}}"}}'
   # deploy:
   #   needs: [build_nedlastingapi]
   #   name: Deploy
